--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta name="theme-color" content="#cc0000" />
-    <meta name="description" content="Smart Feni App" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Smart Feni</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript> Need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
